--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -2,4 +2,7 @@
     position: relative;
     height: 100%;
     background-color: #00250a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
