--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -5,4 +5,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    .fixed-alert {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
 }
