--- a/src/app/components/groups/groups.component.scss
+++ b/src/app/components/groups/groups.component.scss
@@ -112,6 +112,7 @@
     height: 40px;
     width: 40px;
     border-radius: 20px;
+    margin-right: 5px;
     box-shadow: inset 0 0 4px #424242;
 }
 
@@ -129,5 +130,24 @@
         display: flex;
         justify-content: flex-end;
         padding-top: 10px;
+    }
+
+    .members-container {
+        max-height: 150px;
+        width: 200px;
+        overflow-y: scroll;
+    }
+
+    .members-container::-webkit-scrollbar {
+        width: 7px;
+    }
+    
+    .members-container::-webkit-scrollbar-track {
+        border-radius: 10px
+    }
+    
+    .members-container::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: rgba(255, 255, 255, 0.322);
     }
 }
