--- a/src/app/components/profile-display/profile-display.component.scss
+++ b/src/app/components/profile-display/profile-display.component.scss
@@ -1,41 +1,67 @@
-.details-container{   
+.details-container {
     position: relative;
     display: flex;
     flex-direction: column;
     justify-self: center;
-    
-    .fixed-alert{
+
+    .fixed-alert {
         margin-bottom: 0px;
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
     }
-    .title-container{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
 
-        .title-text:disabled{
-            flex: 1;
-            margin: 10px 10px;
-            background-color: white;
-            color: black;
-            font-weight: bold;
-            border: 0;
-            border-radius: 25px;
-            text-align: center;
-            box-shadow: inset 0 0 4px #424242;
+    #profile-column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .form-group {
+            width: 100%;
+
+            .form-control:disabled {
+                font-weight: bold;
+            }
         }
-    }
-        
-}
-.container{
-    width: 900px;
+
+        .title-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
     
-     .user-details{
-       
+            .title-text:disabled {
+                flex: 1;
+                margin: 10px 10px;
+                background-color: white;
+                color: black;
+                font-weight: bold;
+                border: 0;
+                border-radius: 25px;
+                text-align: center;
+                box-shadow: inset 0 0 4px #424242;
+            }
+        }
+    
+        .user-icon {
+            background-color: #1a664065;
+            width: 80px;
+            height: 80px;
+            border-radius: 40px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            font-size: 60px;
+            text-shadow: 0px 0px 3px #424242;
+        }
+    }    
+}
+.container {
+    width: 670px;
+
+    .user-details {
         font-family: Arial, Helvetica, sans-serif;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -43,7 +69,5 @@
         box-shadow: rgba(0, 0, 0, 0.5) 15px 10px 20px;
         border-radius: 20px;
         font-size: large;
-     }
- }
-
-
+    }
+}
