--- a/src/app/components/password-reset/password-reset.component.html
+++ b/src/app/components/password-reset/password-reset.component.html
@@ -1,1 +1,28 @@
-<p>password-reset works!</p>
+<div class="background-container"
+     *ngIf="resetPassword">
+    <div class="form-container">
+        <div class="form-group">
+            <label for="passwordInput">
+                New Password
+            </label>
+            <input id="passwordInput"
+                   class="form-control inset-shadow"
+                   [formControl]="passwordInput"
+                   type="password">
+        </div>
+        <div class="form-group">
+            <label for="repeatPasswordInput">
+                Confirm New Password
+            </label>
+            <input id="repeatPasswordInput"
+                   class="form-control inset-shadow"
+                   [formControl]="confirmPasswordInput"
+                   type="password">
+        </div>
+        <button (click)="updatePassword()">Confirm</button>
+    </div>
+</div>
+<div class="background-container"
+     *ngIf="!resetPassword">
+    requesfsdjhfgedblkjfrg
+</div>
