Styled the message box received when using the same url to reset the password

--- a/src/app/components/password-reset/password-reset.component.html
+++ b/src/app/components/password-reset/password-reset.component.html
@@ -24,5 +24,17 @@
 </div>
 <div class="background-container"
      *ngIf="!resetPassword">
-    requesfsdjhfgedblkjfrg
+    <div class="form-container">
+        <h1 class="display-5 py-2 text-truncate">
+            <input class="title-text"
+                   disabled
+                   value="Warning!">
+        </h1>
+        <h5>Your request was processed. If you want to reset again the password, you have to return to sigin page.</h5>
+        <br>
+        <button [routerLink]="['/signin']"
+                class="btn btn-primary"
+                style="background-color: #1a6640; border: 0;">Return
+        </button>
+    </div>
 </div>
