--- a/src/app/components/password-reset/password-reset.component.scss
+++ b/src/app/components/password-reset/password-reset.component.scss
@@ -20,5 +20,17 @@
             width: 100%;
             padding-bottom: 10px;
         }
+
+        .title-text:disabled {
+            width: 100%;
+            padding: 5px;
+            border-radius: 32px;
+            background-color: rgba(151, 17, 17, 0.616);
+            border: 0;
+            color: black;
+            font-weight: bold;
+            text-align: center;
+            box-shadow: inset 0 0 4px #4e2727;
+        }
     }
 }
