Layout changes to forgot password page

--- a/src/app/components/message-area/message-area.component.scss
+++ b/src/app/components/message-area/message-area.component.scss
@@ -78,6 +78,7 @@
         .message {
             background-color: #096622;
             color: white;
+            text-align: right;
 
             .header {
                 text-align: right;
