--- a/src/app/components/password-forgot/password-forgot.component.html
+++ b/src/app/components/password-forgot/password-forgot.component.html
@@ -1,15 +1,31 @@
 <div class="background-container">
+    <ngb-alert #successAlert
+               class="fixed-alert"
+               *ngIf="successMessage"
+               type="success"
+               (closed)="successMessage = ''"
+               [innerHTML]="successMessage">
+    </ngb-alert>
+    <ngb-alert #dangerAlert
+               class="fixed-alert"
+               *ngIf="dangerMessage"
+               type="danger"
+               (closed)="dangerMessage = ''"
+               [innerHTML]="dangerMessage">
+    </ngb-alert>
     <div class="form-container">
         <div class="form-group">
             <label for="email">
                 Email
             </label>
             <input id="email"
-                    [formControl]="emailInput"
+                   [formControl]="emailInput"
                    class="form-control inset-shadow">
         </div>
 
-        <button (click)="sendEmail()">
+        <button (click)="sendEmail()"
+                class="btn btn-primary"
+                style="background-color: #1a6640; border: 0;">
             Send Email
         </button>
     </div>
