--- a/src/app/components/password-forgot/password-forgot.component.scss
+++ b/src/app/components/password-forgot/password-forgot.component.scss
@@ -1,4 +1,5 @@
 .background-container {
+    position: relative;
     background-color: #00250a;
     display: flex;
     flex-direction: column;
@@ -19,6 +20,17 @@
         .form-group {
             width: 100%;
             padding-bottom: 10px;
+
+            label {
+                font-weight: bold;
+            }
         }
     }
+}
+
+.fixed-alert {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
