Added validation to reset password form

--- a/src/app/components/password-reset/password-reset.component.html
+++ b/src/app/components/password-reset/password-reset.component.html
@@ -8,7 +8,14 @@
             <input id="passwordInput"
                    class="form-control inset-shadow"
                    [formControl]="passwordInput"
-                   type="password">
+                   type="password"
+                   required>
+            <div *ngIf="submitted && passwordInput.invalid"
+                 class="alert alert-danger">
+                <div *ngIf="passwordInput.errors.required">Please enter your new password.</div>
+                <div *ngIf="passwordInput.errors.minlength">Password should have more than {{
+                    passwordInput.errors.minlength.requiredLength }} characters</div>
+            </div>
         </div>
         <div class="form-group">
             <label for="repeatPasswordInput">
@@ -18,6 +25,12 @@
                    class="form-control inset-shadow"
                    [formControl]="confirmPasswordInput"
                    type="password">
+            <div *ngIf="submitted && confirmPasswordInput.invalid"
+                 class="alert alert-danger">
+                <div *ngIf="confirmPasswordInput.errors.required">Please reenter your password.</div>
+                <div *ngIf="confirmPasswordInput.errors.minlength">Password should have more than {{
+                    confirmPasswordInput.errors.minlength.requiredLength }} characters</div>
+            </div>
         </div>
         <button (click)="updatePassword()">Confirm</button>
     </div>
