Added validator for the email from password-forgot component

--- a/src/app/components/password-forgot/password-forgot.component.html
+++ b/src/app/components/password-forgot/password-forgot.component.html
@@ -20,7 +20,13 @@
             </label>
             <input id="email"
                    [formControl]="emailInput"
-                   class="form-control inset-shadow">
+                   class="form-control inset-shadow"
+                   required>
+            <div *ngIf="submitted && emailInput.invalid"
+                 class="invalid-feedback d-block" style="font-size: 16px;">
+                <div *ngIf="emailInput.errors.required">Please enter your email.</div>
+                <div *ngIf="emailInput.errors.email">Please enter a valid email</div>
+            </div>
         </div>
 
         <button (click)="sendEmail()"
