--- a/src/app/components/password-reset/password-reset.component.html
+++ b/src/app/components/password-reset/password-reset.component.html
@@ -11,7 +11,8 @@
                    type="password"
                    required>
             <div *ngIf="submitted && passwordInput.invalid"
-                 class="alert alert-danger">
+                 class="invalid-feedback d-block"
+                 style="font-size: 16px;">
                 <div *ngIf="passwordInput.errors.required">Please enter your new password.</div>
                 <div *ngIf="passwordInput.errors.minlength">Password should have more than {{
                     passwordInput.errors.minlength.requiredLength }} characters</div>
@@ -25,14 +26,21 @@
                    class="form-control inset-shadow"
                    [formControl]="confirmPasswordInput"
                    type="password">
+            <div class="invalid-feedback d-block"
+                 style="font-size: 16px;"
+                 *ngIf="confirmPasswordInput.touched && (confirmPasswordInput.value !== passwordInput.value)">The
+                passwords must be the same.</div>
             <div *ngIf="submitted && confirmPasswordInput.invalid"
-                 class="alert alert-danger">
+                 class="invalid-feedback d-block"
+                 style="font-size: 16px;">
                 <div *ngIf="confirmPasswordInput.errors.required">Please reenter your password.</div>
                 <div *ngIf="confirmPasswordInput.errors.minlength">Password should have more than {{
                     confirmPasswordInput.errors.minlength.requiredLength }} characters</div>
             </div>
         </div>
-        <button (click)="updatePassword()">Confirm</button>
+        <button class="btn btn-primary"
+                style="background-color: #1a6640; border: 0;"
+                (click)="updatePassword()">Confirm</button>
     </div>
 </div>
 <div class="background-container"
