--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -6,6 +6,13 @@
                (closed)="dangerMessage = ''"
                [innerHTML]="dangerMessage">
     </ngb-alert>
+    <ngb-alert #successAlert
+               class="fixed-alert"
+               *ngIf="successMessage"
+               type="success"
+               (closed)="successMessage = ''"
+               [innerHTML]="successMessage">
+    </ngb-alert>
     <div class="signin-container box-shadow">
         <h1 class="display-5 py-2 text-truncate">
             <input class="title-text"
