--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .inset-shadow {
     box-shadow: inset 0 0 4px #424242;
 }
+
+.fixed-alert {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
