--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     left: 0;
     width: 100%;
 }
+
+.mr-15 {
+    margin-right: 15px;
+}
