--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -17,7 +17,7 @@
         <h1 class="display-5 py-2 text-truncate">
             <input class="title-text"
                    disabled
-                   value="Welcome to IMessage">
+                   value="Sign In!">
         </h1>
         <form [formGroup]="signinForm">
             <div class="form-group">
