--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -23,12 +23,8 @@
                          class="col-md-12">
                         <h1 class="display-5 py-2 text-truncate title-container">
                             <input disabled
-                                   [value]="'Create Account Here!'"
+                                   [value]="'Sign Up!'"
                                    class="title-text">
-                            <span class="material-icons"
-                                  style="font-size: 45px; padding-right: 20px">
-                                account_circle
-                            </span>
                         </h1>
                         <div class="px-2">
                             <form [formGroup]="signupForm"
