--- a/src/app/components/signup/signup.component.scss
+++ b/src/app/components/signup/signup.component.scss
@@ -22,13 +22,13 @@
         justify-content: space-between;
 
         .title-text:disabled {
-            flex: 1;
-            margin: 0 20px;
+            width: 100%;
+            padding: 5px;
+            border-radius: 32px;
             background-color: white;
+            border: 0;
             color: black;
             font-weight: bold;
-            border: 0;
-            border-radius: 25px;
             text-align: center;
             box-shadow: inset 0 0 4px #424242;
         }
